Chatter-Filters/src/objects/ChatterCloudSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>Custom_Tag_Prefix__c</fullName>
        <label>Custom Tag Prefix</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Include_At_Tags__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Include At Tags</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_Custom_Tag__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Include Custom Tag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_Hash_Tags__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Include Hash Tags</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_Significant_Words__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Significant Words</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Minimum_Word_Length__c</fullName>
        <label>Minimum Word Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Word_Score__c</fullName>
        <label>Minimum Word Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Chatter Cloud Settings</label>
</CustomObject>